--- a/gateway-service/dockerfile
+++ b/gateway-service/dockerfile
@@ -4,30 +4,21 @@ FROM golang:1.22.2 AS builder
 # Set the working directory inside the container
 WORKDIR /app
 
+COPY go.mod .
+COPY go.sum .
+
+RUN go mod tidy
+
 # Copy the rest of the application code
 COPY . .
 
-# Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
-RUN go mod download
-
-# Move to the gateway-service directory and build the application
-WORKDIR /app/gateway-service
-RUN go build -o /app/gateway-service
-
-# Use a minimal base image to run the application
-FROM gcr.io/distroless/base-debian11
-
-# Set the working directory inside the container
-WORKDIR /app
-
-# Copy the built application from the builder stage
-COPY --from=builder /app/gateway-service /app/gateway-service
+RUN go build -o gateway-service
 
 # Copy the .env file if you need it inside the container
 COPY .env .env
 
 # Expose the port the service will run on
-EXPOSE 8080
+EXPOSE 8082
 
 # Command to run the executable
 CMD ["./gateway-service"]
