--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,8 +66,11 @@ services:
   migration-service:
     image: migrate/migrate:v4.15.0
     environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
       DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable
-    command: ["-path", "/migrations", "-database", "postgres://${DATABASE_URL}", "up"]
+    command: ["-path", "/migrations", "-database", "${DATABASE_URL}", "up"]
     volumes:
       - ./db/migrations:/migrations
     depends_on:
