--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,10 +69,10 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-      DATABASE_URL: ${DATABASE_URI}
-    command: ["-path", "/migrations", "-database", "${DATABASE_URL}", "up"]
+    command: [
+      "sh", "-c", "migrate -path /migrations -database postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable up"
+    ]
     volumes:
       - ./db/migrations:/migrations
     depends_on:
       - postgres
-
