--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,15 +64,17 @@ services:
       - "8082:8082"
 
   migration-service:
-    image: migrate/migrate:v4.15.0
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-    command: [
-      "sh", "-c", "migrate -path /migrations -database postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable up"
-    ]
-    volumes:
-      - ./db/migrations:/migrations
-    depends_on:
-      - postgres
+      image: migrate/migrate:v4.15.0
+      environment:
+        POSTGRES_USER: ${POSTGRES_USER}
+        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+        POSTGRES_DB: ${POSTGRES_DB}
+      command: [
+        "sh", "-c", "migrate -path /migrations -database postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable up"
+      ]
+      volumes:
+        - ./db/migrations:/migrations
+      depends_on:
+        - postgres
+      ports:
+        - "8084:8084"
