--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,8 +66,8 @@ services:
   migration-service:
       image: migrate/migrate:v4.15.0
       environment:
-        DATABASE_URI: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable
-      command: ["-path", "/migrations", "-database", "postgres://${DATABASE_URI}", "up"]
+        DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?sslmode=disable
+      command: ["-path", "/migrations", "-database", "${DATABASE_URL}", "up"]
       volumes:
         - ./db/migrations:/migrations
       depends_on:
